--- a/templates/box-checks/site-detail.html
+++ b/templates/box-checks/site-detail.html
@@ -4,8 +4,73 @@
 {% block content %}
 <h2>{{ site.name }}</h2>
 
-{{ site.geom }}
+<div id="map" style="width: 100%; height: 500px;"></div>
+{{ boxes|json_script:"boxes-data" }}
+<script>
+    const boxesGeojson = JSON.parse(
+        document.getElementById("boxes-data").textContent
+    );
 
-{{ boxes }}
+    let mapOptions = {
+        container: 'map',
+        style: 'https://tiles.openfreemap.org/styles/bright'
+    };
+
+    if (boxesGeojson.features.length > 0) {
+        const bounds = new maplibregl.LngLatBounds();
+        boxesGeojson.features.forEach(feature => {
+            bounds.extend(feature.geometry.coordinates);
+        });
+        mapOptions.bounds = bounds;
+        mapOptions.fitBoundsOptions = { padding: 50 };
+    } else {
+        mapOptions.center = [-122.486052, 37.830348];
+        mapOptions.zoom = 15;
+    }
+
+    const map = new maplibregl.Map(mapOptions);
+
+    map.on('load', () => {
+        map.addSource('boxes', {
+            'type': 'geojson',
+            'data': boxesGeojson
+        });
+
+        map.addLayer({
+            'id': 'boxes',
+            'type': 'circle',
+            'source': 'boxes',
+            'paint': {
+                'circle-radius': 5,
+                'circle-color': '#007cbf'
+            }
+        });
+
+        if (boxesGeojson.features.length > 0) {
+            const bounds = new maplibregl.LngLatBounds();
+            boxesGeojson.features.forEach(feature => {
+                bounds.extend(feature.geometry.coordinates);
+            });
+            map.fitBounds(bounds, { padding: 50 });
+        }
+    })
+</script>
+
+<table class="striped">
+    <thead>
+        <tr>
+            <th scope="col">Box no.</th>
+            <th scope="col">Model</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for box in site.boxes.all %}
+        <tr>
+            <th scope="row">{{ box.number }}</th>
+            <td>{{ box.model }}</td>
+        </tr>
+        {% endfor %}
+    </tbody>
+</table>
 
 {% endblock %}
